--- a/storage/app/config/ccc/template/default_coninfo.tex
+++ b/storage/app/config/ccc/template/default_coninfo.tex
@@ -57,7 +57,7 @@
 			\raggedleft
 				Tel: {company\_phone}\\
 				Fax: {company\_fax}\\
-				{{company\_mail}}\\
+				Mail: {company\_mail}\\
 		\end{footnotesize}
 	}
 
